# ICEProject

./: .gitignore  CMakeLists.txt  assignment2.cpp  assignment2_tests.cpp  parquetHelpers.h
Problem1/: assignment1.cpp  assignment1_tests.cpp  assignment1_timings.cpp  dumb_container.h  node.h  nodeAllocator.h  splitList.h  topFivePctContainer.h
Problem2/: assignment2.cpp  stripGenerator.h
